# bootstrap-vm

./: .gitignore  .travis.yml  README.md  pyproject.toml
.github/workflows/: pythonapp.yml
bootstrap_vm/: __init__.py  __main__.py  bootstrap.py  config.py  constants.py  distributions.py  file_utils.py  remove.py  virtual_machine.py
