[tool.poetry]
name = "bootstrap_vm"
version = "0.1.0"
description = "Bootstrap a VM using libvirt tools"
authors = ["Jelle Besseling <jelle@pingiun.com>"]
license = "GPL-3.0-or-later"

[tool.poetry.scripts]
bootstrap-vm = "bootstrap_vm:main"
remove-vm = "bootstrap_vm:main"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
