[tool.poetry]
name = "bootstrap_vm"
version = "0.3.1"
description = "Bootstrap a VM using libvirt tools"
authors = ["Jelle Besseling <jelle@pingiun.com>"]
license = "GPL-3.0-or-later"

[tool.poetry.scripts]
bootstrap-vm = "bootstrap_vm:main"
remove-vm = "bootstrap_vm:main"

[tool.poetry.dependencies]
python = "^3.6"
pyyaml = "^3.13"

[tool.poetry.dev-dependencies]
flake8 = "^3.7"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
